--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ kotlinxSerializationJSON = "1.7.2"
 kotlinxCoroutines = "1.8.1"
 kotlin-logging = "7.0.3"
 kotlin-reflect = "2.1.20-RC2"
+shadow = "8.+"
 slf4j-api = "2.1.0-alpha1"
 slf4j-log4j12 = "2.0.17"
 log4j = "2.24.3"
@@ -32,4 +33,5 @@ kotlinxEcosystem = ["kotlinxDatetime", "kotlinxSerialization", "kotlinxCoroutine
 logging = ["kotlin-logging", "slf4j-api", "slf4j-log4j12", "log4j-api", "log4j-core"]
 
 [plugins]
+shadow = { id = "com.github.johnrengelman.shadow", version.ref = "shadow"}
 kotlinPluginSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
