--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ kotlinxSerializationJSON = "1.7.2"
 kotlinxCoroutines = "1.8.1"
 kotlin-logging = "7.0.3"
 kotlin-reflect = "2.1.20-RC2"
+ktor = "3.1.1"
 shadow = "8.+"
 slf4j-api = "2.1.0-alpha1"
 slf4j-log4j12 = "2.0.17"
@@ -27,9 +28,13 @@ slf4j-log4j12 = { module = "org.slf4j:slf4j-log4j12", version.ref = "slf4j-log4j
 log4j-api = { module = "org.apache.logging.log4j:log4j-api", version.ref = "log4j" }
 log4j-core = { module = "org.apache.logging.log4j:log4j-core", version.ref = "log4j" }
 flatlaf = { module = "com.formdev:flatlaf", version.ref = "flatlaf"}
+ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
+ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
+
 
 [bundles]
 kotlinxEcosystem = ["kotlinxDatetime", "kotlinxSerialization", "kotlinxCoroutines"]
+ktor = ["ktor-client-core", "ktor-client-okhttp"]
 logging = ["kotlin-logging", "slf4j-api", "slf4j-log4j12", "log4j-api", "log4j-core"]
 
 [plugins]
