feat: verify file hashcode

--- a/app/src/main/resources/astra.properties
+++ b/app/src/main/resources/astra.properties
@@ -11,6 +11,9 @@ gui.page.settings.name=Settings
 gui.page.welcome.name=Welcome
 gui.page.welcome.tip=Astra is the successor of Celestial, and it has more powerful features. You can find some plugins to make your Astra even more powerful.
 gui.page.welcome.title=Welcome to Astra Launcher
+gui.plugins.download-manager.description=Add a UI in Astra to allow you to view the download progress. (Disabling this plugin will not affect the download functionality.)
+gui.plugins.download-manager.name=Download Manager
+gui.plugins.download-manager.pages.dm=Download Manager
 gui.plugins.theme.description=Flatlaf themes for Astra Launcher
 gui.plugins.theme.name=Flatlaf Themes
 gui.plugins.theme.settings.theme=Theme:
