feat: download manager ui

--- a/app/src/main/resources/astra.properties
+++ b/app/src/main/resources/astra.properties
@@ -14,6 +14,7 @@ gui.page.welcome.title=Welcome to Astra Launcher
 gui.plugins.download-manager.description=Add a UI in Astra to allow you to view the download progress. (Disabling this plugin will not affect the download functionality.)
 gui.plugins.download-manager.name=Download Manager
 gui.plugins.download-manager.pages.dm=Download Manager
+gui.plugins.download-manager.pages.dm.list=Tasks
 gui.plugins.theme.description=Flatlaf themes for Astra Launcher
 gui.plugins.theme.name=Flatlaf Themes
 gui.plugins.theme.settings.theme=Theme:
