--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,11 +30,13 @@ log4j-core = { module = "org.apache.logging.log4j:log4j-core", version.ref = "lo
 flatlaf = { module = "com.formdev:flatlaf", version.ref = "flatlaf"}
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
+ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
+ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
 
 
 [bundles]
 kotlinxEcosystem = ["kotlinxDatetime", "kotlinxSerialization", "kotlinxCoroutines"]
-ktor = ["ktor-client-core", "ktor-client-okhttp"]
+ktor = ["ktor-client-core", "ktor-client-okhttp", "ktor-serialization-kotlinx-json", "ktor-client-content-negotiation"]
 logging = ["kotlin-logging", "slf4j-api"]
 logging-impl = ["kotlin-logging", "slf4j-api", "slf4j-log4j12", "log4j-api", "log4j-core"]
 
